--- a/vaction-site.html
+++ b/vaction-site.html
@@ -9,25 +9,95 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <div class="container">
-  <h1 class="jumbotron">We're headed to to Fiji!!</h1>
-  <blockquote class="blockquote">
-    <p>"This is our third time visitng and it gets better everytime!!!"</p>
-    <footer class="blockquote-footer"> Janet, Springfield</footer>
-  </blockquote>  
-  <blockquote class="blockquote">
-    <p>"Im gonna sled down it the next time..."</p>
-    <footer class="blockquote-footer"> Bob, Somewhere Snowy</footer>
-  </blockquote>  
-  <blockquote class="blockquote">
-    <p>"Its a pretty incredible sight to see!"</p>
-    <footer class="blockquote-footer"> Tom, Wonderland</footer>
-  </blockquote> 
-  <button type="button" class="btn btn-primary btn-lg">Large button</button>
-  <button type="button" class="btn btn-danger">Danger</button>
+  <!-- <div class="container">
+    <h1 class="jumbotron">We're headed to to Fiji!!</h1>
+    <blockquote class="blockquote">
+      <p>"This is our third time visitng and it gets better everytime!!!"</p>
+      <footer class="blockquote-footer"> Janet, Springfield</footer>
+    </blockquote>  
+    <blockquote class="blockquote">
+      <p>"Im gonna sled down it the next time..."</p>
+      <footer class="blockquote-footer"> Bob, Somewhere Snowy</footer>
+    </blockquote>  
+    <blockquote class="blockquote">
+      <p>"Its a pretty incredible sight to see!"</p>
+      <footer class="blockquote-footer"> Tom, Wonderland</footer>
+    </blockquote> 
+
+    <!-- button -->
+    <button type="button" class="btn btn-primary btn-lg">Large button</button>
+    <button type="button" class="btn btn-danger">Danger</button>
+
+    <!-- alert -->
+    <div class="alert alert-danger" role="alert">
+      A simple primary alert-check it out!
+    </div>
+
+  <!-- bootstrap grid -->
+  <div class="row">
+    <div class="col-6">
+      <h1>Column 1</h1>
+      <p>Some text here!</p>
+    </div>
+    <div class="col-6">
+      <h1>Column 2</h1>
+      <blockquote class="blockquote">
+        <p>"Its a pretty incredible sight to see!"</p>
+        <footer class="blockquote-footer"> Tom, Wonderland</footer>
+      </blockquote> 
+    </div>
   </div>
-  <div class="alert alert-danger" role="alert">
-    A simple primary alert-check it out!
+
+  <div class="row">
+    <div class="col-4">
+      <h1>Column 1</h1>
+      <p>Some text here!</p>
+    </div>
+    <div class="col-4">
+      <h1>Column 2</h1>
+      <p>Some text here!</p>
+    </div>
+    <div class="col-4">
+      <h1>Column 3</h1>
+      <p>Some text here!</p>
+    </div>
+  </div>
+  
+    <!-- <div class="row">
+      <div class="col-4">
+        <p>Some text here!</p>
+        <p>Another one here!</p>
+      </div>
+      <div class="col-8">
+        <h1>Column 2</h1>
+        <blockquote class="blockquote">
+          <p>"Its a pretty incredible sight to see!"</p>
+          <footer class="blockquote-footer"> Tom, Wonderland</footer>
+        </blockquote> 
+      </div> --> -->
+    </div>
+
+      <div class="row">
+        <div class="col-6">
+          <h1>Box 1</h1>
+          <p>Some text here!</p>
+        </div>
+        <div class="col-6">
+          <h1>Box 2</h1>
+          <p>Some text here!</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <h1>Box 3</h1>
+          <p>Some text here!</p>
+        </div>
+        <div class="col-6">
+          <h1>Box 4</h1>
+          <p>Some text here!</p>
+        </div>
+      </div>
+
   </div>
 </body>
 </html>
