add packages with bootstrap cards
Co-authored-by: Brian Noh <noh24@ymail.com>

--- a/vaction-site.html
+++ b/vaction-site.html
@@ -9,8 +9,8 @@
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-  <!-- <div class="container">
-    <h1 class="jumbotron">We're headed to to Fiji!!</h1>
+  <div class="container">
+    <h1 class="jumbotron">We're headed to to Fuji!!</h1>
     <blockquote class="blockquote">
       <p>"This is our third time visitng and it gets better everytime!!!"</p>
       <footer class="blockquote-footer"> Janet, Springfield</footer>
@@ -33,71 +33,49 @@
       A simple primary alert-check it out!
     </div>
 
-  <!-- bootstrap grid -->
-  <div class="row">
-    <div class="col-6">
-      <h1>Column 1</h1>
-      <p>Some text here!</p>
-    </div>
-    <div class="col-6">
-      <h1>Column 2</h1>
-      <blockquote class="blockquote">
-        <p>"Its a pretty incredible sight to see!"</p>
-        <footer class="blockquote-footer"> Tom, Wonderland</footer>
-      </blockquote> 
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-4">
-      <h1>Column 1</h1>
-      <p>Some text here!</p>
-    </div>
-    <div class="col-4">
-      <h1>Column 2</h1>
-      <p>Some text here!</p>
-    </div>
-    <div class="col-4">
-      <h1>Column 3</h1>
-      <p>Some text here!</p>
-    </div>
-  </div>
-  
-    <!-- <div class="row">
-      <div class="col-4">
-        <p>Some text here!</p>
-        <p>Another one here!</p>
-      </div>
-      <div class="col-8">
-        <h1>Column 2</h1>
-        <blockquote class="blockquote">
-          <p>"Its a pretty incredible sight to see!"</p>
-          <footer class="blockquote-footer"> Tom, Wonderland</footer>
-        </blockquote> 
-      </div> --> -->
-    </div>
-
-      <div class="row">
-        <div class="col-6">
-          <h1>Box 1</h1>
-          <p>Some text here!</p>
-        </div>
-        <div class="col-6">
-          <h1>Box 2</h1>
-          <p>Some text here!</p>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Economy Package</h3>
+            <p class="card-text">Includes:</p>
+            <ul>
+              <li>Peanuts</li>
+              <li>Chips</li>
+              <li>Headphones</li>
+            </ul>
+            <span>Price: $1,000</span>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-6">
-          <h1>Box 3</h1>
-          <p>Some text here!</p>
-        </div>
-        <div class="col-6">
-          <h1>Box 4</h1>
-          <p>Some text here!</p>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Gold Package</h3>
+            <p class="card-text">Includes economy package and:</p>
+            <ul>
+              <li>Wagon tour</li>
+              <li>Blankets</li>
+              <li>Dinner</li>
+            </ul>
+            <span>Price: $3,000</span>
+          </div>
         </div>
       </div>
-
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h3 class="card-title">Premium Package</h3>
+            <p class="card-text">Includes economy and gold package and:</p>
+            <ul>
+              <li>Pictures + Frames</li>
+              <li>Luxurious Tour on Horse</li>
+              <li>A hotel room</li>
+            </ul>
+            <span>Price: $5,000</span>
+          </div>
+        </div>
+      </div>
   </div>
 </body>
 </html>
